[package]
name = "reframework_api_rs"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"

[workspace]
resolver = "2"
members = ["macros"]

[dependencies]
reframework-api-rs-macros = { path = "macros" }

log = { version = "0.4", optional = true }

[features]
default = ["logging"]
logging = ["log"]
